Closed Bug 864770 Opened 12 years ago Closed 12 years ago

Stop calling nsSVGUtils::InvalidateBounds in nsSVGEffects code, and use DLBI instead

Categories

(Core :: SVG, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla23

People

(Reporter: jwatt, Assigned: jwatt)

References

Details

(Keywords: perf)

Attachments

(1 file)

We should stop calling nsSVGUtils::InvalidateBounds in nsSVGEffects code, and use DLBI instead. Removing the calls directly causes failures in: reftests/svg/smil/transform/translate-clipPath-1.svg reftests/svg/smil/transform/translate-gradient-1.svg reftests/svg/smil/transform/translate-pattern-1.svg reftests/svg/dynamic-clipPath-01.svg reftests/svg/dynamic-clipPath-02.svg reftests/svg/dynamic-gradient-contents-01.svg reftests/svg/dynamic-mask-01.svg reftests/svg/dynamic-mask-contents-01.svg reftests/svg/dynamic-pattern-01.svg reftests/svg/dynamic-pattern-02.svg reftests/svg/dynamic-pattern-contents-01.svg reftests/svg/dynamic-pattern-contents-02.svg reftests/svg/gradient-live-01a.svg reftests/svg/gradient-live-01b.svg reftests/svg/gradient-live-01c.svg reftests/svg/gradient-live-01d.svg reftests/svg/pattern-live-01a.svg reftests/svg/pattern-live-01b.svg reftests/svg/pattern-live-01c.svg
Keywords: perf
Attached patch patchSplinter Review
Attachment #740854 - Flags: review?(matt.woodrow)
Attachment #740854 - Flags: review?(matt.woodrow) → review+
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla23
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: