Bug 864770 - Stop calling nsSVGUtils::InvalidateBounds in nsSVGEffects code, and use DLBI instead. r=mattwoodrow